app/lib/shared/generated/psychosims_native_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Dart FFI bindings for native/include/psychosims_native.h
class PsychosimsNativeBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  PsychosimsNativeBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  PsychosimsNativeBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Returns a health string; used to verify the native library loads.
  ffi.Pointer<ffi.Char> psy_version() {
    return _psy_version();
  }

  late final _psy_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'psy_version');
  late final _psy_version =
      _psy_versionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Loads a model from [model_path] and returns a context. Returns NULL on
  /// failure; details are emitted through the logging shim.
  /// [params] is a JSON object string with generation parameters.
  ffi.Pointer<PsyContext> psy_context_load(
    ffi.Pointer<ffi.Char> model_path,
    ffi.Pointer<ffi.Char> params,
  ) {
    return _psy_context_load(
      model_path,
      params,
    );
  }

  late final _psy_context_loadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PsyContext> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('psy_context_load');
  late final _psy_context_load = _psy_context_loadPtr.asFunction<
      ffi.Pointer<PsyContext> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// Destroys the inference context and frees all native resources.
  void psy_context_destroy(
    ffi.Pointer<PsyContext> ctx,
  ) {
    return _psy_context_destroy(
      ctx,
    );
  }

  late final _psy_context_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<PsyContext>)>>(
          'psy_context_destroy');
  late final _psy_context_destroy = _psy_context_destroyPtr
      .asFunction<void Function(ffi.Pointer<PsyContext>)>();

  /// Tokenizes [text] and writes token ids into [tokens] up to [max_tokens].
  /// Returns the number of tokens (may be larger than [max_tokens] if truncated).
  /// Returns -1 on error.
  int psy_tokenize(
    ffi.Pointer<PsyContext> ctx,
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<PsyToken> tokens,
    int max_tokens,
  ) {
    return _psy_tokenize(
      ctx,
      text,
      tokens,
      max_tokens,
    );
  }

  late final _psy_tokenizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<PsyContext>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<PsyToken>, ffi.Int32)>>('psy_tokenize');
  late final _psy_tokenize = _psy_tokenizePtr.asFunction<
      int Function(ffi.Pointer<PsyContext>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<PsyToken>, int)>();

  /// Detokenizes a single token id into a null-terminated UTF-8 string.
  /// The returned pointer is valid until the next call on the same context.
  ffi.Pointer<ffi.Char> psy_detokenize(
    ffi.Pointer<PsyContext> ctx,
    int token,
  ) {
    return _psy_detokenize(
      ctx,
      token,
    );
  }

  late final _psy_detokenizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<PsyContext>, PsyToken)>>('psy_detokenize');
  late final _psy_detokenize = _psy_detokenizePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<PsyContext>, int)>();

  /// Applies the loaded model's chat template to [conversation_json] and writes
  /// the formatted prompt into [out_prompt] up to [out_size]. Returns the number
  /// of bytes written (excluding null terminator) or -1 on error.
  int psy_apply_chat_template(
    ffi.Pointer<PsyContext> ctx,
    ffi.Pointer<ffi.Char> conversation_json,
    ffi.Pointer<ffi.Char> out_prompt,
    int out_size,
  ) {
    return _psy_apply_chat_template(
      ctx,
      conversation_json,
      out_prompt,
      out_size,
    );
  }

  late final _psy_apply_chat_templatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<PsyContext>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Int32)>>('psy_apply_chat_template');
  late final _psy_apply_chat_template = _psy_apply_chat_templatePtr.asFunction<
      int Function(ffi.Pointer<PsyContext>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, int)>();

  /// Queries model metadata (e.g. context size, vocabulary size) as a JSON string.
  /// The returned pointer is valid until the next call on the same context.
  ffi.Pointer<ffi.Char> psy_model_metadata(
    ffi.Pointer<PsyContext> ctx,
  ) {
    return _psy_model_metadata(
      ctx,
    );
  }

  late final _psy_model_metadataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<PsyContext>)>>('psy_model_metadata');
  late final _psy_model_metadata = _psy_model_metadataPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<PsyContext>)>();

  /// Generates tokens from the prompt in [params_json], streaming each token via
  /// [callback]. [user_data] is passed through untouched.
  /// Returns 0 on success, 1 if cancelled, -1 on error.
  int psy_generate(
    ffi.Pointer<PsyContext> ctx,
    ffi.Pointer<ffi.Char> params_json,
    PsyTokenCallback callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _psy_generate(
      ctx,
      params_json,
      callback,
      user_data,
    );
  }

  late final _psy_generatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<PsyContext>, ffi.Pointer<ffi.Char>,
              PsyTokenCallback, ffi.Pointer<ffi.Void>)>>('psy_generate');
  late final _psy_generate = _psy_generatePtr.asFunction<
      int Function(ffi.Pointer<PsyContext>, ffi.Pointer<ffi.Char>,
          PsyTokenCallback, ffi.Pointer<ffi.Void>)>();

  /// Cancels an in-flight generation. Safe to call from another thread.
  void psy_cancel(
    ffi.Pointer<PsyContext> ctx,
  ) {
    return _psy_cancel(
      ctx,
    );
  }

  late final _psy_cancelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<PsyContext>)>>(
          'psy_cancel');
  late final _psy_cancel =
      _psy_cancelPtr.asFunction<void Function(ffi.Pointer<PsyContext>)>();

  /// Resets the KV cache for a new case/session without unloading the model.
  void psy_reset_kv(
    ffi.Pointer<PsyContext> ctx,
  ) {
    return _psy_reset_kv(
      ctx,
    );
  }

  late final _psy_reset_kvPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<PsyContext>)>>(
          'psy_reset_kv');
  late final _psy_reset_kv =
      _psy_reset_kvPtr.asFunction<void Function(ffi.Pointer<PsyContext>)>();
}

final class PsyContext extends ffi.Opaque {}

/// Native token id. Negative values signal errors.
typedef PsyToken = ffi.Int32;
typedef DartPsyToken = int;

/// Streaming token callback. Invoked on the dedicated generation thread.
/// [token_text] is UTF-8 and null-terminated. [is_codepoint_complete] is 1 when
/// the emitted bytes form a complete Unicode codepoint.
typedef PsyTokenCallback
    = ffi.Pointer<ffi.NativeFunction<PsyTokenCallbackFunction>>;
typedef PsyTokenCallbackFunction = ffi.Void Function(
    ffi.Pointer<ffi.Char> token_text,
    ffi.Int32 token_id,
    ffi.Int is_codepoint_complete,
    ffi.Pointer<ffi.Void> user_data);
typedef DartPsyTokenCallbackFunction = void Function(
    ffi.Pointer<ffi.Char> token_text,
    int token_id,
    int is_codepoint_complete,
    ffi.Pointer<ffi.Void> user_data);
